--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -20,9 +20,9 @@
       </div>
     </div>
 
-    <div class='col-md-6 text-center'>
+    <div class='col-md-6 text-center mt-4'>
       <small>電車の混み具合を５段階で表示</small>
-      <%= image_tag "/images/graph.png", class: "img-thumbnail"%>
+      <%= image_tag "/images/graph_image.png", class: "img-thumbnail"%>
     </div>
   </div>
 
