--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>こんにちは <%= @resource.email %>!</p>
+<p>こんにちは <%= @resource.email %>さん!</p>
 
 <p>パスワードの再設定がリクエストされました。 下のリンクをクリックしてパスワードを再設定してください。</p>
 
