--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,44 +1,49 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class='container'>
+  <div class='col-lg-8 col-sm-11 mx-auto my-4'>
+    <h3 class='text-center'>アカウント編集</h3>
+    <div class='row'>
+      <%= form_with model: @user, url: user_registration_path, html: { method: :put }, local: true, class: 'mx-auto' do |f| %>
 
-<%= form_with model: @user, url: user_registration_path, html: { method: :put }, local: true do |f| %>
+      <%= render 'users/shared/error_messages', resource: resource %>
 
-  <%= render 'users/shared/error_messages', resource: resource %>
+      <div class='field'>
+        <%= f.label :email, "Eメール" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email' %>
+      </div>
 
-  <div class='field'>
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email' %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div><%= resource.unconfirmed_email %>の確認待ちです。</div>
+      <% end %>
+
+      <div class='field my-3'>
+        <%= f.label :password, "パスワード" %> <i>(空欄のままなら変更しません)</i><br />
+        <%= f.password_field :password, autocomplete: 'new-password' %>
+        <% if @minimum_password_length %>
+        <br />
+        <small><%= @minimum_password_length %> 文字以上必要です</small>
+        <% end %>
+      </div>
+
+      <div class='field my-3'>
+        <%= f.label :password_confirmation, "パスワードの確認" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: 'new-password' %>
+      </div>
+
+      <div class='field my-3'>
+        <%= f.label :current_password, "現在のパスワード" %><i>(変更には現在のパスワードが必要です)</i><br>
+        <%= f.password_field :current_password, autocomplete: 'current-password' %>
+      </div>
+    </div>
+
+    <div class='text-center'>
+      <div class='actions'>
+        <%= f.submit '変更する', class: 'btn btn-success mt-4' %>
+      </div>
+      <% end %>
+      <hr>
+      <p>アカウントを削除しますか？</p>
+      <%= link_to 'アカウントの削除', registration_path(resource_name), data: { confirm: '削除したら元に戻せません。本当に削除しますか?' }, method: :delete, class: 'btn btn-danger mb-3' %><br>
+      <%= link_to '戻る', :back %>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class='field'>
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: 'new-password' %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class='field'>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: 'new-password' %>
-  </div>
-
-  <div class='field'>
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: 'current-password' %>
-  </div>
-
-  <div class='actions'>
-    <%= f.submit 'Update' %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete %></p>
-
-<%= link_to 'Back', :back %>
+</div>
