--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,15 +1,14 @@
-<div class = 'container'>
-  <div class='row justify-content-center'>
-    <div class = 'col-7'>
-    <h2>Sign up</h2>
-
-    <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+<div class='container'>
+  <div class='mx-auto'>
+    <div class='row'>
+      <h3 class='mx-auto my-4'>新規登録</h3>
+    </div>
+    <div class='row mx-auto'>
+      <%= form_with model: @user, url: user_registration_path, local: true, class: 'mx-auto col-lg-6 col-md-10 col-sm-12' do |f| %>
       <%= render 'users/shared/error_messages', resource: resource %>
-
-      <div class = 'form-group row'>
-        <%= f.label :name, "名前", class: 'col-5' %>
-
-        <div class='col-7'>
+      <div class='form-group row mx-auto'>
+        <%= f.label :name, "名前", class: 'col-lg-4 col-sm-12' %>
+        <div class='col-lg-8 col-sm-12'>
           <%=
             f.text_field :name,
             class: 'form-control',
@@ -20,11 +19,9 @@
           %>
         </div>
       </div>
-
-      <div class = 'form-group row'>
-        <%= f.label :email, "メールアドレス", class: 'col-5' %>
-
-        <div class='col-7'>
+      <div class='form-group row mx-auto'>
+        <%= f.label :email, "メールアドレス", class: 'col-lg-4 col-sm-12' %>
+        <div class='col-lg-8 col-sm-12'>
           <%=
             f.email_field :email,
             class: 'form-control',
@@ -35,15 +32,14 @@
           %>
         </div>
       </div>
-
-      <div class = 'form-group row'>
-        <div class = 'col-5'>
+      <div class='form-group row mx-auto'>
+        <div class='col-lg-4 col-sm-12'>
           <%= f.label :password, "パスワード" %>
           <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %>文字以上)</em>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
           <% end %>
         </div>
-        <div class='col-7'>
+        <div class='col-lg-8 col-sm-12'>
           <%=
             f.password_field :password,
             class: 'form-control',
@@ -53,11 +49,9 @@
           %>
         </div>
       </div>
-
-      <div class = 'form-group row'>
-        <%= f.label :password_confirmation, "パスワード確認", class: 'col-5' %>
-
-        <div class='col-7'>
+      <div class='form-group row mx-auto'>
+        <%= f.label :password_confirmation, "パスワード確認", class: 'col-lg-4 col-sm-12' %>
+        <div class='col-lg-8 col-sm-12'>
           <%=
             f.password_field :password,
             class: 'form-control',
@@ -67,17 +61,14 @@
           %>
         </div>
       </div>
-
-      <div class='form-group text-center'>
-        <%= f.submit "新規登録", class: 'btn' %>
+      <div class='form-group text-center mx-auto mt-4'>
+        <%= f.submit "新規登録", class: 'btn btn-success' %>
       </div>
-    <% end %>
-
+      <% end %>
+    </div>
     <hr>
-    
-    <div class='form-group text-center'>
+    <div class='text-center mx-auto'>
       <%= render 'users/shared/links' %>
     </div>
-
   </div>
 </div>
