--- a/app/views/users/registrations/verify.html.erb
+++ b/app/views/users/registrations/verify.html.erb
@@ -1,21 +1,26 @@
 <div class='container'>
-  <div class='row justify-content-center'>
-    <div class='col-md-5'>
-      <h3 class='text-center'>会員登録ありがとうございます！</h3>
-
-      <p class='text-center'>
+  <div class='mx-auto'>
+    <div class='row'>
+      <h3 class='mx-auto my-4'>会員登録ありがとうございます！</h3>
+    </div>
+    <div class='row'>
+      <p class='mx-auto'>
         現在、仮会員の状態です。
       </p>
-
-      <p class='text-center'>
+    </div>
+    <div class='row'>
+      <p class='mx-auto'>
         ただいま、ご入力頂いたメールアドレス宛に、ご本人様確認用のメールをお送りしました。
       </p>
-
-      <p class='text-center'>
+    </div>
+    <div class='row'>
+      <p class='mx-auto'>
         メール本文内のURLをクリックすると本会員登録が完了となります。
       </p>
-      <div class='text-center'>
-        <%= link_to "トップページへ", root_path, class: 'btn' %>
+    </div>
+    <div class='row'>
+      <div class='mx-auto'>
+        <%= link_to "トップページへ", root_path, class: 'btn btn-outline-success' %>
       </div>
     </div>
   </div>
