--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       <!------------- ログインしている場合 ------------>
       <% if user_signed_in? %>
       <li class='nav-item'>
-        <%= link_to "メイン", root_path, class: 'nav-link' %>
+        <%= link_to "TOP", root_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to "「トレコミグラフとは」", about_path, class: 'nav-link' %>
@@ -39,7 +39,7 @@
       <li>
         <form class='form-inline my-2 my-lg-0'>
           <input class='form-control mr-sm-2' type='search' placeholder='Search' aria-label='Search'>
-          <button class='btn btn-outline-success my-2 my-sm-0' type='submit'>Search</button>
+          <button class='btn btn-success my-2 my-sm-0' type='submit'>Search</button>
         </form>
       </li>
 
