コメントの編集

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 @import 'bootstrap';
 
 header {
-    background-color: #006400;
+    background-color: #6CC3E2;
     a {color: #fff;}
 }
 .traffic {
