--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -39,7 +39,7 @@
             <div><span class="mr-3">西武新宿方面</span><span class="mr-3">
                 上石神井駅</span>
               <span>8:00時頃</span></div>
-            <div>混雑度: 座席の前で立てる</div>
+            <div>混雑度: 混雑しているがつり革は持てる</div>
             <div>コメント: 週明けとあって、中々混んでる</div>
           </li>
           <li class="list-group-item">
@@ -55,7 +55,7 @@
             <div><span class="mr-3">本川越方面</span><span class="mr-3">
                 西武新宿駅
               </span><span>18:00時頃</span></div>
-            <div>混雑度: 立っているのがやっと</div>
+            <div>混雑度: ドア付近から動けない</div>
             <div>コメント: やっぱ、帰宅ラッシュだよねぇ</div>
           </li>
 
