--- a/app/views/users/mypost.html.erb
+++ b/app/views/users/mypost.html.erb
@@ -1,6 +1,6 @@
-<%= @user %>
-<hr>
 <div class="container">
+  <p><%= @user %>の投稿一覧</p>
+  <hr>
   <ul class="list-group">
     <% @posts.each do |post| %>
     <li class="list-group-item">
