--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -45,7 +45,7 @@
 
 <hr>
 
-  <%= link_to( '#', class: "decoration change") do %>
+  <%= link_to( favorite_user_path(current_user.id), class: "decoration change") do %>
     <div class="d-flex justify-content-between">
       <div class="row">
         <div class="col-2 d-flex align-items-center">
