--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <% if station.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-      <p><span>お気に入り解除: </span><%=link_to station.favorites.count, station_favorites_path(station.id), method: :delete %></p>
+  <% if current_user.already_favorited?(@station) %>
+      <p><span>お気に入り解除: </span><%=link_to @station.favorites.count, station_favorites_path(@station), method: :delete %></p>
   <% else %>
-      <p><span>お気に入り登録: </span><%=link_to station.favorites.count, station_favorites_path(station.id), method: :post %></p>
+      <p><span>お気に入り登録: </span><%=link_to @station.favorites.count, station_favorites_path(@station), method: :post %></p>
   <% end %>
 <% else %>
-  <p><span>お気に入り数: </span><%= station.favorites.count %></p>
+  <p><span>お気に入り数: </span><%= @station.favorites.count %></p>
 <% end %>
