--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,10 +16,7 @@
         <%= link_to "「電車アプリとは」", about_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
-        <%= link_to "お気に入り登録", '#', class: 'nav-link' %>
-      </li>
-      <li class='nav-item'>
-        <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
+        <%= link_to "お気に入り一覧", favorite_user_path(current_user.id), class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to "投稿", posts_path, class: 'nav-link' %>
