--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -33,7 +33,7 @@
                 max: 5, 
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#9c6'],
+                colors: ['#48CAE4'],
                 loading: "Loading...",
                 empty:"投稿データがありません"
             %>
@@ -58,7 +58,7 @@
       </ul>
       <div class="row my-4">
         <div class='mx-auto'>
-          <%= link_to "投稿", posts_path, class: 'btn btn-success' %>
+          <%= link_to "投稿", posts_path, class: 'btn btn-primary' %>
         </div>
       </div>
     </div>
