--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -53,5 +53,5 @@
     <%= f.text_area :comment, class: 'form-control', :placeholder => "コメントを入力してください" %>
   </div>
 </div>
-<%= f.submit nil, class: 'btn btn-success d-block mx-auto'%>
+<%= f.submit nil, class: 'btn btn-primary d-block mx-auto'%>
 <% end %>
