--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -5,7 +5,7 @@
                 max: 5, 
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#9c6'],
+                colors: ['#48CAE4'],
                 loading: "Loading...",
                 empty:"投稿データがありません"
             %>
