--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -76,23 +76,23 @@
           </div>
           <p>混み具合は５段階で。時間は1時間ごとに表示されるので、通勤やお出かけの際にチェックすると便利です！</p>
           <div class='row d-flex justify-content-center'>
-              <%= image_tag "混雑1.jpg", alt:"混雑1", class:"icon-about" %>
-              <%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon-about" %>
-              <%= image_tag "混雑3.jpg", alt:"混雑3", class:"icon-about" %>
-              <%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon-about" %>
-              <%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon-about" %>
+            <%= image_tag "混雑1.jpg", alt:"混雑1", class:"icon-about" %>
+            <%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon-about" %>
+            <%= image_tag "混雑3.jpg", alt:"混雑3", class:"icon-about" %>
+            <%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon-about" %>
+            <%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon-about" %>
           </div>
           <br>
           <p>ユーザーからの投稿がリアルタイムで反映されていくので、電車の状況が分かります。</p>
 
           <div class="row">
             <% if user_signed_in? %>
-            <%= link_to "混雑時間を調べる", root_path, class: 'btn btn-success mb-2 mx-auto' %>
+            <%= link_to "混雑時間を調べる", root_path, class: 'btn btn-primary mb-2 mx-auto' %>
             <% else %>
-            <%= link_to "混雑時間を調べる", new_user_registration_path, class: 'btn btn-success mb-2 mx-auto' %>
+            <%= link_to "混雑時間を調べる", new_user_registration_path, class: 'btn btn-primary mb-2 mx-auto' %>
             <% end %>
 
-            <%= link_to "会員登録する", new_user_registration_path, class: 'btn btn-success mx-auto mb-2' %>
+            <%= link_to "会員登録する", new_user_registration_path, class: 'btn btn-primary mx-auto mb-2' %>
           </div>
           <p class="small text-danger">*会員登録するとお気に入り駅の登録や、投稿ができます</p>
           <div class="col-1">
