--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class='navbar navbar-expand-lg'>
 
-<% if user_signed_in? %>
+  <% if user_signed_in? %>
   <%= link_to  image_tag("Logo.jpeg"), root_path, class: 'nav-link'  %>
-<% else %>
+  <% else %>
   <%= link_to  image_tag("Logo.jpeg"), about_path, class: 'nav-link'  %>
-<% end %>
+  <% end %>
 
 
   <button class='navbar-toggler' type='button' id="toggler-icon" data-toggle='collapse' data-target='#navbarTogglerDemo01' aria-controls='navbarTogglerDemo01' aria-expanded='false' aria-label='Toggle navigation'>
@@ -39,7 +39,7 @@
       <li>
         <form class='form-inline my-2 my-lg-0'>
           <input class='form-control mr-sm-2' type='search' placeholder='Search' aria-label='Search'>
-          <button class='btn btn-success my-2 my-sm-0' type='submit'>Search</button>
+          <button class='btn btn-primary my-2 my-sm-0' type='submit'>Search</button>
         </form>
       </li>
 
