--- a/app/views/users/mypost.html.erb
+++ b/app/views/users/mypost.html.erb
@@ -10,7 +10,7 @@
       <div>混雑度:<%= post.congestion_level %></div>
       <div>コメント:<%= post.comment %>
       </div>
-      <%= button_to '投稿削除', delete_post_path(post.id), data: {confirm: '本当に投稿を削除しますか？'}, method: :delete, class: "btn btn-warning" %>
+      <%= button_to '投稿削除', delete_post_path(post.id), data: {confirm: '本当に投稿を削除しますか？'}, method: :delete, class: "btn btn-secondary" %>
     </li>
     <% end %>
   </ul>
