--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,10 +46,17 @@ p{
   filter: opacity(20%);
 
 }
+
 .icon-about {
   width: auto;
   max-width: 100%;
   height: 90px;
   object-fit: contain;
   margin: 20px auto;
+}
+
+.icon-top {
+  width: 3rem;
+  max-width: 100%;
+  object-fit: contain;
 }
