--- a/app/views/admin/users_index.html.erb
+++ b/app/views/admin/users_index.html.erb
@@ -6,7 +6,8 @@
   <% @users.each do |user| %>
   <p>ユーザー名：<%= link_to user.name, show_user_path(user) %><span class="ml-4">ID：<%= user.id %></span>
   <p>メール：<%= user.email %>
-  <p>最終ログイン：<%= user.last_sign_in_at %>
+  <p>最終ログイン：
+    <%= l user.last_sign_in_at, format: :long if user.last_sign_in_at%>
     <span class="ml-4">投稿数：
       <%= user.posts.size %>
     </span>
