modify color & icon size

--- a/app/views/admin/posts_search.html.erb
+++ b/app/views/admin/posts_search.html.erb
@@ -25,5 +25,4 @@
   </ul>
   <hr>
   <% end %>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
+</main>
