--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -36,28 +36,28 @@
         <div class='card-body'>
 
           <li class="list-group-item">
-            <div>名前: 電車太郎</div>
+            <div>ユーザー名: 電車太郎</div>
+            <div><span>06/12</span>
+              <span>14:00時台</span></div>
             <div><span class="mr-3">西武新宿方面</span><span class="mr-3">
-                上石神井駅</span>
-              <span>8:00時頃</span></div>
-            <div>混雑度: 混雑しているがつり革は持てる</div>
-            <div>コメント: 週明けとあって、中々混んでる</div>
+                上石神井駅</span></div>
+            <div><%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon-top" %>週明けとあって、中々混んでる</div>
           </li>
           <li class="list-group-item">
-            <div>名前: 鉄道一郎</div>
+            <div>ユーザー名: 鉄道一郎</div>
+            <div><span>06/12</span>
+              <span>8:00時台</span></div>
             <div><span class="mr-3">本川越方面</span><span class="mr-3">
-                高田馬場駅</span>
-              <span>14:00時頃</span></div>
-            <div>混雑度: 着席できる</div>
-            <div>コメント: 意外と座れる。</div>
+                高田馬場駅</span></div>
+            <div><%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon-top" %>意外と座れる。</div>
           </li>
           <li class="list-group-item">
-            <div>西武道雄</div>
+            <div>ユーザー名: 西武道雄</div>
+            <div><span>06/11</span>
+              <span>18:00時台</span></div>
             <div><span class="mr-3">本川越方面</span><span class="mr-3">
-                西武新宿駅
-              </span><span>18:00時頃</span></div>
-            <div>混雑度: ドア付近から動けない</div>
-            <div>コメント: やっぱ、帰宅ラッシュだよねぇ</div>
+                西武新宿駅</span></div>
+            <div><%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon-top" %>やっぱ、帰宅ラッシュだよねぇ</div>
           </li>
 
         </div>
