--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -23,7 +23,7 @@
 
     <div class='text-center'>
       <div class='actions'>
-        <%= f.submit 'パスワードの変更', class: 'btn btn-success mt-4'  %>
+        <%= f.submit 'パスワードの変更', class: 'btn btn-primary mt-4'  %>
       </div>
       <% end %>
       <%= render 'users/shared/links' %>
