--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -37,7 +37,7 @@
 
     <div class='text-center'>
       <div class='actions'>
-        <%= f.submit '変更する', class: 'btn btn-success mt-4' %>
+        <%= f.submit '変更する', class: 'btn btn-primary mt-4' %>
       </div>
       <% end %>
       <hr>
