--- a/app/views/users/registrations/verify.html.erb
+++ b/app/views/users/registrations/verify.html.erb
@@ -20,7 +20,7 @@
     </div>
     <div class='row'>
       <div class='mx-auto'>
-        <%= link_to "トップページへ", root_path, class: 'btn btn-outline-success' %>
+        <%= link_to "トップページへ", root_path, class: 'btn btn-outline-primary' %>
       </div>
     </div>
   </div>
