--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -22,7 +22,7 @@
       </div>
 
       <div class='form-group text-center'>
-        <%= f.submit '確認メールを再送信する', class: 'btn btn-success mt-4' %>
+        <%= f.submit '確認メールを再送信する', class: 'btn btn-primary mt-4' %>
       </div>
 
       <% end %>
