--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -30,7 +30,7 @@
       </div>
 
       <div class='form-group text-center'>
-        <%= f.submit "送信", class: 'btn btn-success mt-4' %>
+        <%= f.submit "送信", class: 'btn btn-primary mt-4' %>
       </div>
 
       <% end %>
