--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class='form-group text-center mx-auto mt-4'>
-        <%= f.submit "新規登録", class: 'btn btn-success' %>
+        <%= f.submit "新規登録", class: 'btn btn-primary' %>
       </div>
       <% end %>
     </div>
