--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-<%= link_to "ログイン", new_session_path(resource_name), class: 'btn  btn-outline-success my-2' %><br />
+<%= link_to "ログイン", new_session_path(resource_name), class: 'btn  btn-outline-primary my-2' %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-<%= link_to "新規登録", new_registration_path(resource_name), class: 'btn  btn-outline-success my-2' %><br />
+<%= link_to "新規登録", new_registration_path(resource_name), class: 'btn  btn-outline-primary my-2' %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
