chage favorite btn and create destroy btn

--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,9 +1,13 @@
 <% if user_signed_in? %>
   <% if current_user.already_favorited?(@station) %>
-      <p><span>お気に入り解除: </span><%=link_to @station.favorites.count, station_favorites_path(@station), method: :delete %></p>
+    <%= link_to station_favorites_path(@station), class: 'like-link', method: :delete do %>
+      <i class = 'fa fa-heart unlike-btn'></i>
+      <i class = 'like-count'><%= @station.favorites.count %></i>
+    <% end %>
   <% else %>
-      <p><span>お気に入り登録: </span><%=link_to @station.favorites.count, station_favorites_path(@station), method: :post %></p>
+    <%= link_to station_favorites_path(@station), class: 'like-link', method: :post do %>
+      <i class = 'fa fa-heart like-btn'></i>
+      <i class = 'like-count'><%= @station.favorites.count %></i>
+    <% end %>
   <% end %>
-<% else %>
-  <p><span>お気に入り数: </span><%= @station.favorites.count %></p>
 <% end %>
