--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'bootstrap';
+
+.like-link:hover {
+  background-color: #fff!important;
+}
+
+.like-btn, .unlike-btn, .like-count {
+  font-size: 20px;
+  text-decoration-line: none!important;
+}
+
+.like-btn {
+  color: #808080;
+}
+
+.unlike-btn {
+  color: #e54747;
+}
