--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -1,21 +1,45 @@
-<div class="container  d-flex justify-content-center mt-3">
-  <div class="w-75">
+<div class='container d-flex justify-content-center mt-5'>
+  <div class='w-75'>
     <h1>お気に入り</h1>
 
     <hr>
 
-    <div class="row">
+    <div class='row'>
       <% @favorites.each do |favorite| %>
-        <div class="col-md-8 mt-2">
-          <div class="d-inline-flex">
-            <div class="container mt-3">
-              <h4 class="w-100">駅名：<%= favorite.station.station_name %></h4>
-              <h6 class="w-100">駅No：<%= favorite.station.station_number %></h6>
-              <h6 class="w-100">路線名：<%= favorite.station.line %></h6>
+        <div class='col-md-8 my-3'>
+          <h4 class='w-100'>駅名：<%= favorite.station.station_name %></h4>
+          <h6 class='w-100'>駅No：<%= favorite.station.station_number %></h6>
+          <h6 class='w-100'>路線名：<%= favorite.station.line %></h6>
+        </div>
 
+        <div class='col-md-4 my-auto d-flex justify-content-center'>
+          <button type='button' class='btn btn-danger' data-toggle='modal' data-target='#favoriteModal'>
+            削除する
+          </button>
+        </div>
+
+        <div class='modal fade' id='favoriteModal' tabindex='-1' role='dialog' aria-labelledby='favoriteModalLabel' aria-hidden='true'>
+          <div class='modal-dialog' role='document'>
+            <div class='modal-content'>
+              <div class='modal-header'>
+                <h5 class='modal-title' id='favoriteModalLabel'>お気に入り駅を削除しますか？</h5>
+                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                  <span aria-hidden='true'>&times;</span>
+                </button>
+              </div>
+              <div class='modal-body'>
+                <h4 class='w-100'>駅名：<%= favorite.station.station_name %></h4>
+                <h6 class='w-100'>駅No：<%= favorite.station.station_number %></h6>
+                <h6 class='w-100'>路線名：<%= favorite.station.line %></h6>
+              </div>
+              <div class='modal-footer'>
+                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+                <button type='button' class='btn btn-danger'>削除する</button>
+              </div>
             </div>
           </div>
         </div>
+
       <% end %>
     </div>
 
