change mypost action

--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -12,6 +12,7 @@
               <h4 class='w-100'>駅名：<%= favorite.station.station_name %></h4>
               <h6 class='w-100'>駅No：<%= favorite.station.station_number %></h6>
               <h6 class='w-100'>路線名：<%= favorite.station.line %></h6>
+              <h6 class='w-100'>方角：<%= favorite.user.posts.direction %></h6>
             </div>
           </div>
         </div>
