--- a/app/views/users/mypost.html.erb
+++ b/app/views/users/mypost.html.erb
@@ -7,9 +7,7 @@
       <div>路線<%= post.direction %>方面&ensp;
         駅名:<%= post.station.station_name %>&ensp;
         <%= post.time %>時頃</div>
-      <div>混雑度:<%= post.congestion_level %></div>
-      <div>コメント:<%= post.comment %>
-      </div>
+      <div><%= image_tag "#{@icon[post.congestion_level - 1]}", alt:"混雑#{post.congestion_level}", class:"icon-top" %>&ensp;<%= post.comment %></div>
       <%= button_to '投稿削除', delete_post_path(post.id), data: {confirm: '本当に投稿を削除しますか？'}, method: :delete, class: "btn btn-secondary" %>
     </li>
     <% end %>
