--- a/app/views/admin/show_user.html.erb
+++ b/app/views/admin/show_user.html.erb
@@ -1,28 +1,2 @@
-<% provide(:title, "投稿一覧（管理者）") %>
-<main class="container">
-  <h3 class="text-center">投稿一覧</h3>
-  <h5>投稿検索</h5>
-  <%= form_with model: @post, method: :get,url: posts_search_path, local: true do |f| %>
-  開始日：<%= f.date_field :start_date, class: 'mr-4'%>
-  開始時刻：<%= f.select :start_time, [['0時', 0], ['1時', 1], ['2時', 2], ['3時', 3], ['4時', 4], ['5時', 5], ['6時', 6], ['7時', 7], ['8時', 8], ['9時', 9], ['10時', 10], ['11時', 11], ['12時', 12], ['13時', 13], ['14時', 14], ['15時', 15], ['16時', 16], ['17時', 17], ['18時', 18], ['19時', 19], ['20時', 20], ['21時', 21], ['22時', 22], ['23時', 23]], {prompt: "全選択"}, class: 'mr-4' %>
-  方面：<%= f.select :direction, [['西武新宿方面', 0], ['本川越方面', 1]], {prompt: "全選択"} %><br>
-  終了日：<%= f.date_field :end_date, class: 'mr-4' %>
-  終了時刻：<%= f.select :end_time, [['0時', 0], ['1時', 1], ['2時', 2], ['3時', 3], ['4時', 4], ['5時', 5], ['6時', 6], ['7時', 7], ['8時', 8], ['9時', 9], ['10時', 10], ['11時', 11], ['12時', 12], ['13時', 13], ['14時', 14], ['15時', 15], ['16時', 16], ['17時', 17], ['18時', 18], ['19時', 19], ['20時', 20], ['21時', 21], ['22時', 22], ['23時', 23]], {prompt: "全選択"}, class: 'mr-4' %>
-  駅：<%= f.collection_select :station, Station.all, :id, :station_name, {prompt: "全選択"} , class: 'mr-4'%>
-  <%= f.submit "検索", class: 'ml-4' %>
-  <% end %>
-  <hr>
-  <% @posts.each do |post| %>
-  <ul class="list-unstyled">
-    <li>ポストID：<%= post.id%></li>
-    <li>投稿者：<%= link_to "#{post.user.name}", show_user_path(post.user)%></li>
-    <li>日付：<%= post.date%><span class="ml-4">曜日：<%= post.day_of_week %></span><span class="ml-4">時刻：<%= post.time %>時</span></li>
-    <li>方面：<%= post.direction%><span class="ml-4">駅：<%= post.station.station_name%></span>
-    </li>
-    <li>混雑具合：<%= image_tag "#{@icon[post.congestion_level - 1]}", alt:"混雑#{post.congestion_level}", class:"icon-top" %></li>
-    <li>コメント：<%= post.comment%></li>
-    <%= button_to '投稿削除', delete_post_path(post.id), data: {confirm: '本当に投稿を削除しますか？'}, method: :delete, class: "btn btn-secondary" %>
-  </ul>
-  <hr>
-  <% end %>
-</main>
+<% provide(:title, "個別ユーザー（管理者）") %>
+<%= render partial: 'posts' %>
