--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
-  <% if current_user.already_favorited?(@station) %>
-    <%= link_to station_favorites_path(@station), class: 'like-link', method: :delete do %>
+  <% if current_user.already_favorited?(@station, @direction) %>
+    <%= link_to station_favorites_path(@station, @direction), class: 'like-link', method: :delete do %>
       <i class = 'fa fa-heart unlike-btn'></i>
       <i class = 'like-count'><%= @station.favorites.count %></i>
     <% end %>
   <% else %>
-    <%= link_to station_favorites_path(@station), class: 'like-link', method: :post do %>
+    <%= link_to station_favorites_path(@station, @direction), class: 'like-link', method: :post do %>
       <i class = 'fa fa-heart like-btn'></i>
       <i class = 'like-count'><%= @station.favorites.count %></i>
     <% end %>
